syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_dq_rule_input_entry;


message DsDqRuleInputEntry {

     int32 id=1 ;
     optional string field=2 ;
     optional string type=3 ;
     optional string title=4 ;
     optional string value=5 ;
     optional string options=6 ;
     optional string placeholder=7 ;
     optional int32 option_source_type=8 ;
     optional int32 value_type= 9;
     optional int32 input_type= 10;
     optional int32 is_show= 11;
     optional int32 can_edit=12 ;
     optional int32 is_emit= 13;
     optional int32 is_validate= 14;
     optional string create_time= 15;
     optional string update_time= 16;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsDqRuleInputEntryService {
  rpc ListDsDqRuleInputEntries(ListDsDqRuleInputEntriesRequest) returns (ListDsDqRuleInputEntriesResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsDqRuleInputEntries"
    };
  }

  rpc GetDsDqRuleInputEntry(GetDsDqRuleInputEntryRequest) returns (DsDqRuleInputEntry) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsDqRuleInputEntries/*}"
    };
  }

  rpc CreateDsDqRuleInputEntry(CreateDsDqRuleInputEntryRequest) returns (DsDqRuleInputEntry) {
    option (google.api.http) = {
      post: "/v1alpha1/DsDqRuleInputEntries"
      body: "DsDqRuleInputEntry"
    };
  }

  rpc UpdateDsDqRuleInputEntry(UpdateDsDqRuleInputEntryRequest) returns (DsDqRuleInputEntry) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsDqRuleInputEntry.name=DsDqRuleInputEntries/*}"
      body: "DsDqRuleInputEntry"
    };
  }

  rpc DeleteDsDqRuleInputEntry(DeleteDsDqRuleInputEntryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsDqRuleInputEntries/*}"
    };
  }
}

// message DsDqRuleInputEntry {
// ! This should be defined elsewhere
// }

message ListDsDqRuleInputEntriesRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsDqRuleInputEntriesResponse {
  // The field name should match the noun "DsDqRuleInputEntry" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsDqRuleInputEntry DsDqRuleInputEntries = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsDqRuleInputEntryRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsDqRuleInputEntryRequest {
  // The parent resource name where the DsDqRuleInputEntry is to be created.
  string parent = 1;

  // The DsDqRuleInputEntry id to use for this DsDqRuleInputEntry.
  string DsDqRuleInputEntry_id = 2;

  // The DsDqRuleInputEntry resource to create.
  // The field name should match the Noun in the method name.
  DsDqRuleInputEntry DsDqRuleInputEntry = 3;
}

message UpdateDsDqRuleInputEntryRequest {
  // The DsDqRuleInputEntry resource which replaces the resource on the server.
  DsDqRuleInputEntry DsDqRuleInputEntry = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsDqRuleInputEntryRequest {
  // The resource name of the DsDqRuleInputEntry to be deleted.
  string name = 1;
}
